--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -3,7 +3,7 @@
 # Your secret key is used for verifying the integrity of signed cookies.
 # If you change this key, all old signed cookies will become invalid!
 
-# Make sure the secret is at least 30 characters and all random,
+  # Make sure the secret is at least 30 characters and all random,
 # no regular words or you'll be exposed to dictionary attacks.
 # You can use `rails secret` to generate a secure secret key.
 
@@ -20,3 +20,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  aws_access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
+  aws_secret_access_key:   <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
